<?xml version="1.0"?>
<package>
  <name>test_publishers</name>
  <version>0.0.0</version>
  <description>The test_publishers package</description>

  <maintainer email="hendrix@todo.todo">hendrix</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
